test_report.txt

> my-app@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/CISC275-team10-project/CISC275-team10-project/node_modules/react-dnd-html5-backend/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import { HTML5BackendImpl } from './HTML5BackendImpl.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      1 | import React, { useState } from "react";
    > 2 | import { HTML5Backend as Backend } from "react-dnd-html5-backend";
        | ^
      3 | import { DndProvider } from "react-dnd";
      4 | import { TaskCard } from "../components/TaskCard";
      5 | import Parking from "../components/Parking";

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/pages/ParkingSystem.tsx:2:1)
      at Object.<anonymous> (src/App.tsx:4:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

----------------------|---------|----------|---------|---------|-------------------
File                  | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------------------|---------|----------|---------|---------|-------------------
All files             |       0 |        0 |       0 |       0 |                   
 src                  |       0 |        0 |       0 |       0 |                   
  App.tsx             |       0 |      100 |       0 |       0 | 8                 
  index.tsx           |       0 |      100 |     100 |       0 | 9-23              
  reportWebVitals.ts  |       0 |        0 |       0 |       0 | 3-10              
 src/components       |       0 |        0 |       0 |       0 |                   
  AddTask.tsx         |       0 |        0 |       0 |       0 | 10-85             
  Navbar.tsx          |       0 |      100 |       0 |       0 | 6                 
  Parking.tsx         |       0 |      100 |       0 |       0 | 15-38             
  ParkingBlock.tsx    |       0 |      100 |       0 |       0 | 15-47             
  ParkingVehicle.tsx  |       0 |        0 |       0 |       0 | 10-54             
  ReservationList.tsx |       0 |      100 |       0 |       0 | 10-22             
  StopWatch.tsx       |       0 |        0 |       0 |       0 | 3-27              
  TaskCard.tsx        |       0 |      100 |       0 |       0 | 9-39              
 src/interface        |       0 |        0 |       0 |       0 |                   
  task.ts             |       0 |        0 |       0 |       0 |                   
 src/pages            |       0 |        0 |       0 |       0 |                   
  Home.tsx            |       0 |      100 |       0 |       0 | 7                 
  ParkingSystem.tsx   |       0 |        0 |       0 |       0 | 12-82             
 src/utilities        |       0 |      100 |     100 |       0 |                   
  carTypes.ts         |       0 |      100 |     100 |       0 | 1                 
  itemTypes.ts        |       0 |      100 |     100 |       0 | 1                 
  services.ts         |       0 |      100 |     100 |       0 | 1                 
----------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        2.588 s
Ran all test suites.
